tools/prod/docker/proxy/envoy.yaml
static_resources:
  listeners:
  - name: listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            name: routes
            virtual_hosts:
            - name: any
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/"
                route:
                  cluster: api
              - match:
                  prefix: "/"
                route:
                  cluster: web
          http_filters:
          - name: envoy.router
  clusters:
  - name: api
    type: STRICT_DNS
    load_assignment:
      cluster_name: apis
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api
                port_value: 80
    connect_timeout: 0.25s
  - name: web
    type: STRICT_DNS
    load_assignment:
      cluster_name: webs
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web
                port_value: 80
    connect_timeout: 0.25s
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9000
